# MyOS

./: .gitignore  CMakeLists.txt  README.md  bochs.out  main.cpp
.cache/clangd/index/: boot.c.BA31DC3BD3FC979D.idx  boot.c.BF26A18ECBDFE013.idx  boot.h.D99A0D5DCD92E853.idx  boot.h.F13DAF8C2A285C70.idx  boot_info.h.F66FF7491AE1B7F5.idx  cpu_instr.h.4E10196E06AA2E90.idx  loader.h.22D853EEB9C0555F.idx  loader.h.A1412FEC0D55EA4B.idx  loader_16.c.A8835284E7022D61.idx  loader_32.c.D9728EB678F42E57.idx  start.S.443E59C36936EDA1.idx  start.S.77868D8FD139553A.idx  start.S.AF7AD7EBF9C84686.idx  start.S.F118D90602F5F83A.idx  types.h.00AE33A8D18ADB10.idx  types.h.D0AE4D1FAB5BF128.idx
image/: init.elf  kernel.elf  loop.elf  shell.elf  snake.elf
nasm/: mbr.s
nasm/mbr/01/: mbr.s
nasm/mbr/02/: mbr.s
script/: gdb.py  img-write-linux.sh  img-write-osx.sh  img-write-win.bat  qemu-debug-linux.sh  qemu-debug-osx.sh  qemu-debug-win.bat
source/applib/: CMakeLists.txt  crt0.S  cstart.c  lib_syscall.c  lib_syscall.h
source/boot/: CMakeLists.txt  boot.c  boot.h  start.S
source/common/: boot_info.h  cpu_instr.h  elf.h  exc_frame.h  types.h
source/init/: CMakeLists.txt  link.lds  main.c  main.h
source/kernel/: CMakeLists.txt  kernel.lds
source/kernel/core/: memory.c  task.c  task.c.bak
source/kernel/cpu/: cpu.c  gate.c  gdt.c  idt.c  syscall.c
source/kernel/dev/: console.c  dev.c  disk.c  keyboard.c  time.c  tty.c
source/kernel/fs/: file.c  fs.c
source/kernel/fs/devfs/: devfs.c
source/kernel/fs/fatfs/: fatfs.c
source/kernel/include/: os_cfg.h
source/kernel/include/core/: memory.h  task.h  task.h.bak
source/kernel/include/cpu/: cpu.h  gate.h  gdt.h  idt.h  mmu.h  syscall.h  tss.h
source/kernel/include/dev/: console.h  dev.h  disk.h  keyboard.h  time.h  tty.h
source/kernel/include/fs/: file.h  fs.h
source/kernel/include/fs/devfs/: devfs.h
source/kernel/include/fs/fatfs/: fatfs.h
source/kernel/include/ipc/: mutex.h  sem.h
source/kernel/include/test/: test.h
source/kernel/include/tools/: assert.h  bitmap.h  klib.h  list.h  log.h
source/kernel/init/: first_task.c  first_task_entry.S  init.c  init.h  lib_syscall.c  start.S
source/kernel/ipc/: mutex.c  sem.c
source/kernel/test/: test.c
source/kernel/tools/: assert.c  bitmap.c  klib.c  list.c  log.c
source/loader/: CMakeLists.txt  loader.h  loader_16.c  loader_32.c  start.S
source/loop/: CMakeLists.txt  link.lds  main.c  main.h
source/newlib/i686-elf/include/: _newlib_version.h  ctype.h  devctl.h  fenv.h  ftw.h  inttypes.h  math.h  newlib.h  pthread.h  sched.h  stdatomic.h  time.h  unctrl.h  wchar.h
source/newlib/i686-elf/include/machine/: _endian.h  ieeefp.h  (+1 more)
source/newlib/i686-elf/lib/: cygmon.ld
source/shell/: CMakeLists.txt  link.lds  main.c  main.h
source/snake/: CMakeLists.txt  link.lds  main.c  main.h
(+12 files in other folders)
